--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  --color-back: white;
+  --color-back: yellow;
   --color-title: rgb(7, 155, 163);
   --color-theme: #bb7162;
   --color-icon-front: whitesmoke;
